some wip on notes handling